--- a/week4/axios-part-1/assignment1.html
+++ b/week4/axios-part-1/assignment1.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="styles.css"> 
     <title>Document</title>
 </head>
-<body>
+<body class="body">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous"></script>
     <script src="axiostodoassignment.js"></script>
+    <form name="todoform">
+        <input name="title" placeholder="Title"/>
+        <input name="description" placeholder="Description"/>
+        <input name="imgUrl" placeholder="Image Url"/>
+        <button>Submit</button>
+    </form>
 </body>
 </html>
